--- a/project-porfolio.html
+++ b/project-porfolio.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>project portfolio</title>
+    <link rel="stylesheet" href="./CSS/project-portfolio.css">
 </head>
-<body>
-    <header>
-
+<body class="open-sans">
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">Ma<span class="span-style">r</span>y</h3>
+            <ul>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button class="button-style">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <section class="banner">
+           <div class="banner-content">
+             <h4 class="banner-tytle">Hi, I  am</h4>
+            <h2 class="banner-heading">Mary Hardy</h2>
+            <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="button-style">Download</button>
+            <button class="button-style">Contact</button>
+           </div>
+           <img src="images/hardy.png" alt="" class="banner-image">
+        </section>          
     </header>
     <main>
 
