--- a/project-porfolio.html
+++ b/project-porfolio.html
@@ -31,7 +31,132 @@
         </div>
          
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <section class="about bg-style">
+            <h4 class="section-title">About Me</h4>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-details">
+                <div class="about-name">
+                    <h6>Name</h6>
+                    <p>Abdul Alim</p>
+                </div>
+                <div class="about-email">
+                    <h6>Email</h6>
+                    <p>aabdulalim833@gmail.com</p>
+                </div>
+                <div class="about-dateofbirth">
+                    <h6>Date of Birth</h6>
+                    <p>1 December 1998</p>
+                </div>
+                <div class="about-fron">
+                    <h6>From</h6>
+                    <p>Chattogram</p>
+                </div>
+            </div>
+        </section>
+        <!-- what I do section starts-->
+         <section class="skills">
+            <h3 class="section-title">
+                What I do
+            </h3>
+            <p class="section-description">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="skills-item">
+                <div class="skill">
+                <img src="/images/icons/js.png" alt="">
+                <h3>Vanilla JavaScript</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="/images/icons/react.png" alt="">
+                <h3>React</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="/images/icons/nodejs.png" alt="">
+                <h3>Node.js</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="/images/icons/mongo.png" alt="">
+                <h3>MongoDB</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            </div>
+         </section>
+         <section class="resume">
+            <div class="resume-title">
+                <h2 style="text-align: center;">A summary of My Resume</h2>
+            </div>
+            <div class="resume-details">
+                <div class="my-education">
+                    <h3>My Education</h3>
+                    <div class="edu-title">
+                        <h4 class="edu resume-title-heading">Master in Computer Engineering</h4>
+                        <p class="edu-sub">Harvard University / 2015 - 2017</p>
+                        <p class="edu-des">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="edu-title">
+                         <h4 class="edu resume-title-heading">Master in Computer Engineering</h4>
+                        <p class="edu-sub">Harvard University / 2015 - 2017</p>
+                        <p class="edu-des">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="edu-title">
+                         <h4 class="edu resume-title-heading">Master in Computer Engineering</h4>
+                        <p class="edu-sub">Harvard University / 2015 - 2017</p>
+                        <p class="edu-des">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="My-Experiance">
+                    <h3 >My Experiance</h3>
+                    <div class="exp-title">
+                        <h4 class="exp resume-title-heading">Sr. Font End Developer</h4>
+                        <p class="exp-sub dark-2">Apple Inc / 2020 - Current</p>
+                        <p class="exp-des">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="exp-title">
+                        <h4 class="exp resume-title-heading">Jr. Font End Developer</h4>
+                        <p class="exp-sub">Dribbble Inc / 2018 - 2022</p>
+                        <p class="exp-des">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="exp-title">
+                        <h4 class="exp resume-title-heading">HTML Developer</h4>
+                        <p class="exp-sub">Adobe Inc / 2017 - 2018</p>
+                        <p class="exp-des">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <div class="btn">
+            <button class="btn-primary btn">Download CV</button>
+         </div>
+    </main>
+    <footer class="bg-style footer">
+        <div class="footer-colum">
+            <h3 class="footer-title">Lets Connect</h3>
+            <p class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="img">
+                <img src="/images/icons/facebook.png" alt="">
+            <img src="/images/icons/insta.png" alt="">
+            <img src="/images/icons/twitter.png" alt="">
+            </div>
+        </div>
+        <div class="footer-colum">
+            <h3 class="footer-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your massege"></textarea>
+                <button type="submit " class="btn-primary btn">submit</button>
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
